# lucky-script

./: .eslintrc.js  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  jest.config.js  package.json  roadmap.md  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
.claude/: settings.json
.github/workflows/: lark-sandbox.yaml  main.yaml
.specify/: feature.json
docs/: plan-improvements.md  plan-next-steps.md
lark-sandbox/: CLAUDE.md  Makefile  README.md  calculator.lark  calculator_test.py  json.lark  json_test.py  lucky_script.lark  lucky_script_future.lark  lucky_script_future_test.py  lucky_script_test.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
lark-sandbox/grammars/: lucky_script.lark
sketchbook/: grammar.ohm  grammar.test.ts  grammar.ts  inspirations.md  json.test.ts  parse.test.ts  parse.ts
sketchbook/calculator/: READMD.md  ast.ts  bytecode.ts  calculator.test.ts  compiler.test.ts  compiler.ts  grammar.ohm  grammar.ohm-bundle.d.ts  grammar.ohm-bundle.js  integration.test.ts  parser.test.ts  parser.ts  vm.ts
sketchbook/inspirations/: clojure.clj  elixir.exs  fsharp.fs  haskell.hs  javascript.js  julia.jl  lua.lua  swift.swift  typescript.ts
sketchbook/vm/: bytecode.ts  compile.ts  opcodes.ts  vm.test.ts  vm.ts
specs/001-while-break-continue/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/: grammar.ohm  grammar.test.ts  grammar.ts  repl.ts  test.ts  testingUtils.ts
src/Calculator/: Ast.ts  Expression.ts  Interpreter.test.ts  Interpreter.ts  Parser.test.ts  Parser.ts  (+6 more)
(+259 files in other folders)
