[project]
name = "lark-sandbox"
version = "0.1.0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "lark",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--cov-report=term:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]

[tool.coverage.run]
omit = ["*_test.py"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
# black-compatible defaults
